deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giorgio-deployment
  namespace: giorgio-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giorgio-aplicacion
  template:
    metadata:
      labels:
        app: giorgio-aplicacion
    spec:
      containers:
        - name: giorgio-contenedor
          image: 132900311735.dkr.ecr.us-east-1.amazonaws.com/giorgio-docker:latest
