cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-test
  namespace: giorgio-shop
  labels:
    app: api-middleware
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: giorgio-aplicacion
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
