load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
  namespace: giorgio-shop
spec:
  selector:
    app: giorgio-aplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
