ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giorgio-ingress
  namespace: giorgio-shop
  labels:
    app: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api-test/
            pathType: Prefix
            backend:
              service:
                name: api-test
                port:
                  number: 8000
